--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,5 +1,5 @@
 parser: parser.cpp lexer.cpp main.cpp PrettyPrinter.h Visitor.h
-	g++ -O2 -g -std=gnu++11 main.cpp parser.cpp lexer.cpp -o mitscript-parser
+	g++ -O2 -g -std=gnu++11 main.cpp parser.cpp lexer.cpp -o mitscript
 
 parser.cpp: parser.yy
 	bison --output=parser.cpp --defines=parser.h -v parser.yy
