add old print program

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,5 +1,8 @@
-parser: parser.cpp lexer.cpp main.cpp PrettyPrinter.h Visitor.h
+parser: parser.cpp lexer.cpp main.cpp interpreter/Interpreter.h Visitor.h AST.h
 	g++ -O2 -g -std=gnu++11 main.cpp parser.cpp lexer.cpp -o mitscript
+
+printer: parser.cpp lexer.cpp main.cpp PrettyPrinter.h Visitor.h AST.h
+	g++ -O2 -g -std=gnu++11 print_main.cpp parser.cpp lexer.cpp -o mitscript-print
 
 parser.cpp: parser.yy
 	bison --output=parser.cpp --defines=parser.h -v parser.yy
@@ -8,4 +11,4 @@ lexer.cpp: lexer.lex
 	flex  --outfile=lexer.cpp --header-file=lexer.h lexer.lex
 
 clean:
-	rm -f lexer.cpp lexer.h parser.cpp parser.h parser.output *.exe mitscript
+	rm -f lexer.cpp lexer.h parser.cpp parser.h parser.output *.exe mitscript mitscript-print
