reorganize and add automatic str concat

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,5 +1,5 @@
-parser: parser.cpp lexer.cpp main.cpp interpreter/Interpreter.h interpreter/State.h interpreter/Value.h interpreter/Exception.h Visitor.h AST.h
-	g++ -O2 -g -std=gnu++11 main.cpp parser.cpp lexer.cpp -o mitscript
+parser: parser.cpp lexer.cpp main.cpp interpreter/*.h interpreter/*.cpp Visitor.h AST.h
+	g++ -O2 -g -std=gnu++11 main.cpp interpreter/Value.cpp parser.cpp lexer.cpp -o mitscript
 
 printer: parser.cpp lexer.cpp main.cpp PrettyPrinter.h Visitor.h AST.h
 	g++ -O2 -g -std=gnu++11 print_main.cpp parser.cpp lexer.cpp -o mitscript-print
