--- a/vm/Makefile
+++ b/vm/Makefile
@@ -1,4 +1,7 @@
-all: bc-parser.cpp bc-lexer.cpp bc-parser.cpp
+interpreter: main.cpp bc-parser
+	g++ -g -std=c++1y main.cpp interpreter.cpp bc-parser.cpp bc-lexer.cpp -o interpreter
+
+bc-parser: bc-parser.cpp bc-lexer.cpp bc-parser-driver.cpp
 	g++ -g -std=c++1y bc-parser-driver.cpp bc-parser.cpp bc-lexer.cpp -o bc-parser
 
 bc-parser.cpp: bc-parser.yy
