--- a/vm/Makefile
+++ b/vm/Makefile
@@ -2,7 +2,7 @@ compiler: compiler-main.cpp compiler.h cfg.h
 	g++ -g -std=c++1y compiler-main.cpp ../parser/parser.cpp ../parser/lexer.cpp -o compiler
 
 interpreter: interpreter-main.cpp interpreter.cpp bc-parser
-	g++ -g -std=c++1y interpreter-main.cpp interpreter.cpp bc-parser.cpp bc-lexer.cpp ../parser/parser.cpp ../parser/lexer.cpp -o interpreter
+	g++ -g -std=c++1y interpreter-main.cpp interpreter.cpp types.cpp bc-parser.cpp bc-lexer.cpp ../parser/parser.cpp ../parser/lexer.cpp -o interpreter
 
 bc-parser: bc-parser.cpp bc-lexer.cpp bc-parser-driver.cpp
 	g++ -g -std=c++1y bc-parser-driver.cpp bc-parser.cpp bc-lexer.cpp -o bc-parser
